# npu

./: .gitignore  Cargo.toml
.github/workflows/: npug.yml
npug/: CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml
npug/docs/: npug-abi-v0.1.md
npug/examples/: gen_golden.rs  inspect.rs
npug/fixtures/: minimal_v0_1.npug
npug/include/: npug.h
npug/python/: gen_py.sh  test_parse.py
npug/schema/: npug.fbs
npug/src/: builder.rs  error.rs  generated.rs  lib.rs  reader.rs  version.rs
npug/tests/: cabi_smoke.rs  golden_fixture.rs  roundtrip_kernel.rs  roundtrip_minimal.rs  roundtrip_quant.rs  roundtrip_schedule.rs  roundtrip_tensor.rs  version_compat.rs
