[package]
name = "npug"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Auto-NPU .npug FlatBuffer ABI"

[dependencies]
flatbuffers.workspace = true
thiserror.workspace = true

[build-dependencies]
flatbuffers.workspace = true

[[example]]
name = "gen_golden"
path = "examples/gen_golden.rs"

[[example]]
name = "inspect"
path = "examples/inspect.rs"
